--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,3 +6,6 @@
 @import './components/buttons';
 @import './components/links';
 @import './components/notes';
+@import './components/without';
+@import './components/notesScreen';
+
