added auth styles

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,12 @@
 //Colors
-$primary: #993366;
+//$primary: #540d6e;
+//$primary: #993366;
+//$primary:#a83870;
+$primary:#7a2952;
+$pink:#ee4266;
+$yellow:#ffd23f;
+$mint:#3bceac;
+$green:#0ead69;
 $dark-gray: #363636;
 $light-gray: #d8d8d8;
 $white: #fff;
