--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -19,7 +19,8 @@
 }
 
 .btn-primary {
-  background-color: $primary;
+  //background-color: $primary;
+  background-color: $green;
   border-radius: 2px;
 
   &:disabled {
