--- a/src/styles/components/_auth.scss
+++ b/src/styles/components/_auth.scss
@@ -8,9 +8,27 @@
   width: 100vw;
 }
 
+.auth__main-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.auth__spine {
+  background-color: $dark-gray;
+  border-radius: 2px;
+  background: repeating-linear-gradient(to right, $light-gray 40%, $mint 50%);
+  width: 30px;
+  
+}
+
+.auth__form-container {
+  background-color: red;
+  margin-left: 15px;
+}
+
 .auth__box-container {
   background-color: white;
-  box-shadow: 0px 3px $dark-gray;
+  box-shadow: 0px 2px $dark-gray;
   border-radius: 2px;
   padding: 20px;
   width: 250px;
@@ -19,6 +37,20 @@
 .auth__title {
   color: darken($color: $primary, $amount: 20);
   margin-bottom: 20px;
+  text-align: center;
+}
+
+.auth__icon-box {
+  display: flex;
+  justify-content: center;
+}
+
+.auth__icon {
+  box-shadow: 1px 1px $light-gray;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  width: 50%;
+
 }
 
 .app__input {
