--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -28,6 +28,14 @@ main {
     margin-bottom: 20px;
 }
 
+.ml-1 {
+    margin-left: 5px;
+}
+
+.mr-1 {
+    margin-right: 5px;
+}
+
 .pointer {
     cursor: pointer;
 }
