--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -37,6 +37,8 @@
 
   transition: background-color .3s ease;
 
+  width: 50%;
+
   &:hover {
     background-color: darken($color: red, $amount: 10);
   }
