--- a/src/styles/components/_notesScreen.scss
+++ b/src/styles/components/_notesScreen.scss
@@ -53,3 +53,8 @@
     box-shadow:5px 5px 5px -4px $dark-gray;
     height: 150px;
 }
+
+.noteScreen__delete-btn {
+    display: flex;
+    justify-content: center;
+}
