style fixes added

--- a/src/styles/components/_notes.scss
+++ b/src/styles/components/_notes.scss
@@ -24,6 +24,11 @@
   font-weight: lighter;
 }
 
+.notes__sidebar-name {
+  display: flex;
+  align-items: center;
+}
+
 .notes__new-entry {
   align-items: center;
   cursor: pointer;
